@@ -1,1 +1,1 @@
-rvm 1.9.2
+rvm 1.9.3
