@@ -1,36 +1,33 @@
 source 'http://rubygems.org'
 
-gem 'rails', '3.1.1'
+gem 'rails', '3.2.0.rc2'
 
 # Database Adapter
-gem 'mysql2', '0.3.7',                    :platforms => [:ruby]
-gem 'pg',                                 :platforms => [:mswin, :mingw]
-gem 'thin', '~> 1.2.11',                  :platforms => [:mswin, :mingw]
-gem 'eventmachine', '~> 1.0.0.beta.4.1',  :platforms => [:mswin, :mingw]
+gem 'mysql2',         '0.3.11'              # Install instructions for Windows: http://blog.mmediasys.com/2011/07/07/installing-mysql-on-windows-7-x64-and-using-ruby-with-it/
+gem 'thin',           '~> 1.3.1',           platforms: [:mswin, :mingw]
+gem 'eventmachine',   '~> 1.0.0.beta.4.1',  platforms: [:mswin, :mingw]
 
 # Gems used by project
-gem 'carrierwave'                  # File Uploads
-
-gem 'contour', '~> 0.5.6'          # Basic Layout and Assets
-gem 'devise',  '~> 1.4.4'          # User Authorization
-gem 'omniauth',   '0.2.6'          # User Multi-Authentication
-gem 'kaminari'                     # Pagination
-gem 'systemu', '~> 2.2.0'          # Running Ocra system command
-gem 'ocra', :platforms => [:mingw]
+gem 'contour',        '~> 0.9.0'            # Basic Layout and Assets
+gem 'carrierwave'                           # File Uploads
+gem 'kaminari'                              # Pagination
+gem 'systemu',        '~> 2.2.0'            # Running Ocra system command
+gem 'ocra',                                 platforms: [:mingw]
 
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
-  gem 'sass-rails',   '~> 3.1.4'    # Compiles CSS
-  gem 'coffee-rails', '~> 3.1.1'    # Compiles JavaScript
-  gem 'uglifier',     '>= 1.0.3'    # Minimizes and obscures JS and CSS
+  gem 'sass-rails',   '~> 3.2.3'            # Compiles CSS
+  gem 'coffee-rails', '~> 3.2.0'            # Compiles JavaScript
+  gem 'uglifier',     '>= 1.0.3'            # Minimizes and obscures JS and CSS  
 end
 
-gem 'jquery-rails'                  # JavaScript Engine
+gem 'jquery-rails'                          # JavaScript Engine
 
 # Testing
 group :test do
   # Pretty printed test output
-  gem 'win32console', :platforms => [:mswin, :mingw]
-  gem 'turn', '0.8.2'
+  gem 'win32console',                       platforms: [:mswin, :mingw]
+  gem 'turn',         '~> 0.8.3',           require: false
+  gem 'simplecov',                          require: false
 end
