@@ -2,10 +2,6 @@ class Authentication < ActiveRecord::Base
   belongs_to :user
   
   def provider_name
-    if provider == 'open_id'
-      "OpenID"
-    else
-      provider.titleize
-    end
+    OmniAuth.config.camelizations[provider.to_s.downcase] || provider.to_s.titleize
   end
 end
