@@ -51,7 +51,7 @@ class User < ActiveRecord::Base
     "#{first_name} #{last_name}"
   end
   
-  def rev_name
+  def reverse_name
     "#{last_name}, #{first_name}"
   end
   
@@ -60,12 +60,12 @@ class User < ActiveRecord::Base
   end
   
   def apply_omniauth(omniauth)
-    unless omniauth['user_info'].blank?
-      self.email = omniauth['user_info']['email'] if email.blank?
-      self.first_name = omniauth['user_info']['first_name'] if first_name.blank?
-      self.last_name = omniauth['user_info']['last_name'] if last_name.blank?
+    unless omniauth['info'].blank?
+      self.email = omniauth['info']['email'] if email.blank?
+      self.first_name = omniauth['info']['first_name'] if first_name.blank?
+      self.last_name = omniauth['info']['last_name'] if last_name.blank?
     end
-    authentications.build(:provider => omniauth['provider'], :uid => omniauth['uid'])
+    authentications.build(provider: omniauth['provider'], uid: omniauth['uid'])
   end
 
   def password_required?
