@@ -22,9 +22,16 @@ Elastic::Application.configure do
   # Only use best-standards-support built into browsers
   config.action_dispatch.best_standards_support = :builtin
 
+  # # Raise exception on mass assignment protection for ActiveRecord models
+  # config.active_record.mass_assignment_sanitizer = :strict
+  # 
+  # # Log the query plan for queries taking more than this (works
+  # # with SQLite, MySQL, and PostgreSQL)
+  # config.active_record.auto_explain_threshold_in_seconds = 0.5
+
   # Do not compress assets
   config.assets.compress = false
-
+  
   # Expands the lines which load the assets
   config.assets.debug = true
 end
