@@ -1,0 +1,11 @@
+
+
+
+
+localhost
+25
+
+
+
+Elastic
+http://localhost
