@@ -1,14 +1,14 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  user_id: 3
+  user: admin
   name: MyString
   files: MyText
   comments: MyText
   folder: folder_one
 
 two:
-  user_id: 3
+  user: admin
   name: MyString
   files: "MyText, MyText2"
   comments: MyText
