@@ -1,12 +1,12 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/Fixtures.html
 
 one:
-  user_id: 1
+  user: valid
   name: MyString
   files: MyText
 
 two:
-  user_id: 1
+  user: valid
   name: MyString
   files: MyText
   
