@@ -1,5 +1,7 @@
 require 'test_helper'
 
+SimpleCov.command_name "test:integration"
+
 class NavigationTest < ActionDispatch::IntegrationTest
   fixtures :users
   
