@@ -1,6 +1,8 @@
 require 'test_helper'
 require 'rails/performance_test_help'
 
+SimpleCov.command_name "test:performance"
+
 class BrowsingTest < ActionDispatch::PerformanceTest
   # Refer to the documentation for all available options
   # self.profile_options = { :runs => 5, :metrics => [:wall_time, :memory]
