@@ -1,4 +1,0 @@
-require 'test_helper'
-
-class TorrentsHelperTest < ActionView::TestCase
-end
