@@ -1,8 +1,13 @@
 require 'test_helper'
 
+SimpleCov.command_name "test:units"
+
 class UserTest < ActiveSupport::TestCase
-  # Replace this with your real tests.
-  test "the truth" do
-    assert true
+  test "should get reverse name" do
+    assert_equal 'LastName, FirstName', users(:valid).reverse_name
+  end
+  
+  test "should apply omniauth" do
+    assert_not_nil users(:valid).apply_omniauth({'info' => {'email' => 'Email', 'first_name' => 'FirstName', 'last_name' => 'LastName'}})
   end
 end
