@@ -1,5 +1,12 @@
 == 0.5.0
 
+* Enhancements
+  * Update to Rails 3.2.0.rc2 and Contour 0.9.0
+
+* Testing
+  * SimpleCov added for test coverage
+  * TravisCI configuration files added
+
 == 0.4.0
 
 * Enhancements
